<resources>
    <string name="app_name">Motorcycle Catalogue</string>
    <string name="oil_capacity_format">%.1f L</string>
    <string name="displacement_format">%d cc</string>
    <string name="max_power_format">%.1f hp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_motorcycle_image">Motorcycle Image</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="text_address">Address</string>
    <string name="text_cod">Cash on Delivery (COD)</string>
    <string name="text_virtual_account">Virtual Account (Bank BCA)</string>
    <string name="text_buy_now">Buy Now</string>
    <string name="text_spesifications">Spesifications</string>
    <string name="text_oil_capacity">Oil Tank\nCapacity</string>
    <string name="text_displacement">Displacement</string>
    <string name="text_max_power">Maximum\nPower</string>
    <string name="text_full_name">Full Name</string>
    <string name="description_profile_picture">Profile Picture Placeholder</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_login"> Login</string>
    <string name="description_app_logo">App Logo</string>
    <string name="text_app_name">MotoShop</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="hint_enter_email">Enter email address</string>
    <string name="hint_password">Enter password</string>
    <string name="text_dont_have_account">Don\'t have an account yet? </string>
    <string name="text_register"> Register</string>
    <string name="text_product_details">Product Details</string>
    <string name="text_delivery_details">Delivery Details</string>
    <string name="text_order_id">Order ID</string>
    <string name="text_ordered_by">Ordered By</string>
    <string name="text_payment_type">Payment Type</string>
    <string name="text_cancel_order">Cancel Order</string>
    <string name="hint_enter_name">Enter your name</string>
    <string name="text_already_have_account">Already have an account?</string>
    <string name="description_favorite">Icon Favorite</string>
    <string name="text_logout">Logout</string>
    <string name="text_order_transactions">Order Transactions</string>
    <string name="description_slider_image">Slider Image</string>
    <string name="text_checkout">Checkout</string>
    <string name="text_delivery_to">Delivery to:</string>
    <string name="text_email_password_cannot_empty">Email / Password field cannot be empty!</string>
    <string name="text_register_success">Register User Successful!</string>
    <string name="text_in_process">In Process</string>
    <string name="text_valid_virtual_account">Enter a valid Virtual Account</string>
    <string name="title_order_received">Order Received</string>
    <string name="icon_dot"><![CDATA[&#9679]]></string>
    <string name="text_name_cannot_empty">Full Name field cannot be empty!</string>
    <string name="text_update_success">Update profile success!</string>
    <string name="text_favorite">Favorite</string>
    <string name="text_remove_favorite">Removed from Favorite!</string>
    <string name="text_add_favorite">Added to Favorite!</string>
    <string name="text_logout_success">Logout Successful!</string>
    <string name="text_no_transaction">No transactions yet</string>
    <string name="text_order_cancel">Order Canceled</string>
    <string name="text_enter_valid_email">Enter a valid email address</string>
    <string name="text_email_cannot_empty">Email field cannot be empty</string>
    <string name="text_password_less_4">Password must be at least 4 digit</string>
    <string name="text_password_empty">Password field cannot be empty</string>
    <string name="text_full_name_empty">Full name field cannot be empty</string>
    <string name="text_no_favorite">No Favorite Motorcycle</string>
    <string name="text_order_failed">Failed to order motorcycle, please check your connection</string>
    <string name="text_fail_update_data">Failed to update profile data</string>
    <string name="text_cancel_order_failed">Failed to cancel order, please check your connection</string>
    <string name="title_edit_profile">Edit Profile</string>
</resources>