<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.orderdetail.OrderDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_product_details"
            android:textColor="@color/primary_color"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_detail_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingHorizontal="12dp"
            android:elevation="2dp"
            app:cardCornerRadius="8dp"
            android:paddingVertical="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_detail">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="110dp"
                    android:layout_height="150dp"
                    app:cardCornerRadius="16dp"
                    tools:src="@tools:sample/avatars">

                    <ImageView
                        android:id="@+id/iv_motorcycle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        tools:src="@tools:sample/avatars"
                        android:contentDescription="@string/description_motorcycle_image" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="12dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">


                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        app:cardBackgroundColor="@color/primary_color"
                        app:cardCornerRadius="8dp">

                        <TextView
                            android:id="@+id/tv_status"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingHorizontal="8dp"
                            android:paddingVertical="5dp"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            tools:text="In Process" />

                    </androidx.cardview.widget.CardView>


                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/primary_color"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:text="PCX125" />

                    <TextView
                        android:id="@+id/tv_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:textAlignment="textStart"
                        android:textColor="@color/orange_primary"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="Rp. 50.000.000,-" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text_delivery_details"
            android:textColor="@color/primary_color"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/cv_detail_product" />

        <LinearLayout
            android:id="@+id/ll_delivery_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_delivery">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_order_id" />

                <TextView
                    android:id="@+id/tv_order_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textColor="@color/primary_color"
                    tools:text="@tools:sample/lorem/random" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_ordered_by" />

                <TextView
                    android:id="@+id/tv_ordered_by"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/primary_color"
                    tools:text="@tools:sample/lorem/random" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_phone_number" />

                <TextView
                    android:id="@+id/tv_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/primary_color"
                    tools:text="@tools:sample/lorem/random" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_payment_type" />

                <TextView
                    android:id="@+id/tv_payment_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/primary_color"
                    tools:text="@tools:sample/lorem/random" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_address" />

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="5"
                    android:textColor="@color/primary_color"
                    tools:text="@tools:sample/lorem/random" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_marginBottom="30dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:textStyle="bold"
            android:text="@string/text_cancel_order"
            app:layout_constraintTop_toBottomOf="@id/ll_delivery_details" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>