<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="2dp"
    android:layout_margin="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <androidx.cardview.widget.CardView
            android:layout_width="110dp"
            android:layout_height="150dp"
            app:cardCornerRadius="16dp"
            tools:src="@tools:sample/avatars">

            <ImageView
                android:id="@+id/iv_motorcycle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars"
                android:contentDescription="@string/description_motorcycle_image" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="12dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/tv_category"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    tools:text="Scooter" />

                <ImageView
                    android:id="@+id/iv_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_favorite"
                    android:contentDescription="@string/description_favorite" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_color"
                android:textSize="20sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:textStyle="bold"
                tools:text="PCX125 46456345 etretert" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAlignment="textEnd"
                android:textColor="@color/orange_primary"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Rp. 50.000.000,-" />

            <Button
                android:id="@+id/btn_buy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginStart="80dp"
                android:text="@string/text_checkout" />


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>